--- a/index.html
+++ b/index.html
@@ -205,11 +205,13 @@
             </section>
 
             <h1 id="support">Support</h1>
-            <p>Still have questions? Our team is available to assist with any Forget Me Pot inquiries or troubleshooting.</p>
-            <a href="mailto:concordiaentrepteam@gmail.com" class="contact">
-                <i class="ph ph-envelope-open"></i>
-                <span>Email Us</span>
-            </a>
+            <div class="contact-wrapper">
+                <p>Still have questions? Our team is available to assist!</p>
+                <a href="mailto:concordiaentrepteam@gmail.com" class="contact">
+                    <i class="ph ph-envelope-open"></i>
+                    <span>Email Us</span>
+                </a>
+            </div>
             </section>
         </main>
 
@@ -235,11 +237,11 @@
             <button class="checkout-btn">Checkout</button>
         </div>
 
-        <button id="backToTop" aria-label="Back to top">
-            <i class="ph ph-caret-up"></i>
-        </button>
+    <button id="backToTop" aria-label="Back to top">
+        <i class="ph ph-caret-up"></i>
+    </button>
     
     <script src="js/script.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web@2.1.1"></script>
-</body>
+    </body>
 </html>
