--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="From single windowsills to entire hotel lobbies, Forget-Me-Pot ensures your plants thrive consistently. Our automated care system removes the guesswork, so every plant flourishes as intended, day after day.">
+        <meta name="keywords" content="Forget Me Pot, smart plant pot, self watering plant pot, automated plant care">
         <title>Forget Me Pot</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" type="image/x-icon" href="images/logo.ico">
@@ -159,11 +161,8 @@
                 <details class="faq-item">
                     <summary>How do I set up Forget Me Pot after purchase?</summary>
                     <p>
-                        Simply <b>snap a photo of your plant</b> using the companion app!
-                        The app identifies the plant species and delivers personalized 
-                        care instructions from trusted plant databases.
-                        <br>
-                        You may then <b>select your notification preferences</b> (e.g. phone messages) on the app.
+                        Simply select each plant's initial preferences and care routines through our <b>dedicated Google Form</b>, ideal for businesses!
+                        Once configured, the companion app allows for remote monitoring and sends notifications whenever adjustments are needed.
                     </p>
                 </details>
 
